# kyros-praxis

./: .backend.pid  .coderabbit.yaml  .env.example  .env.integrations.example  .env.local.example  .frontend.pid  .gitignore  .kiloignore  .pre-commit-config.yaml  .replit  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  DATABASE_PERFORMANCE_REPORT.md  LICENSE  README.md  SECURITY_REPORT.md  TODO: add integrator role.txt  WARP.md  agents.md  context prompt.md  demonstrate_role_fix.py  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  frontend-current-plan.md  launch-local-test.sh  launch-production.sh  mcp-servers.json  mcp-servers.local.json.example  package-lock.json  package.json  pyproject.toml  replit.md  run-dev.sh  test.db  test_role_hierarchy_validation.py  validate_role_fix.py  verify-installation.sh
.changeset/: config.json
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md  labels.yml  pull_request_template.md
.specstory/: .project.json
agents/: PLAN.md  README.md
api-specs/: orchestrator-v1.yaml
attached_assets/: GPT-5 Pro tmux_1759035744820.md  Kyros Short Business Summary_1759035744820.md  content-1759037355480.md  opencode-integration-architecture_1759035744820.md
docs/: CODE_QUALITY_STATUS_REPORT.md  DEVIATIONS.md  PLAN.md  PR_HANDOFF.md  Untitled 2682b55f8d8580bcaccaf5b744a95465.csv  agent-sync.md  git-hooks.md  role-based-access-control.md  tasks_deduped.md  todo-burn-down.md  version-control.md
kyros-praxis/: .config.server.ts.kate-swp  .dockerignore  .env.test.example  .gitignore  .mcp.json  AGENTS.md  (+36 more)
(+644 files in other folders)
